--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -3,3 +3,14 @@ head
   meta[name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"]
   meta[http-equiv="content-language" content="ja"]
   meta[http-equiv="Content-Type" content="text/html; charset=UTF-8"]
+  / IEの場合 meta tag 追加
+  - unless (request.user_agent =~ /Windows/).blank?
+    meta[http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"]
+  = display_meta_tags reverse: true
+
+  = csrf_meta_tags
+  link[rel="preload" href="/assets/font/roboto/Roboto-Regular.wolf2" as="font" type="font/woff2" crossorigin="anonymous"]
+  link[rel="preload" href="/assets/font/roboto/Roboto-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
+  link[rel="preload" href="/assets/font/roboto/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
+
+  = yield :local_css
