--- a/app/views/layouts/single_column.html.slim
+++ b/app/views/layouts/single_column.html.slim
@@ -10,6 +10,7 @@ html
         .row
           .col-sm-12.col-md-10.col-lg-8.mx-auto
             = yield
+    = render :partial => 'layouts/footer'
 
   = javascript_include_tag "application"
   = yield :local_js
