--- a/app/views/layouts/single_column.html.slim
+++ b/app/views/layouts/single_column.html.slim
@@ -3,6 +3,9 @@ html
   = render :partial => 'layouts/head'
 
   body
+    = render :partial => 'layouts/header'
+
+    / start main contents
     main.pb-3.margin-header
       .container-fluid.title.py-2.py-md-4
         = generate_h1tag unless @disable_h1tag
@@ -10,6 +13,8 @@ html
         .row
           .col-sm-12.col-md-10.col-lg-8.mx-auto
             = yield
+    / end main contents
+
     = render :partial => 'layouts/footer'
 
   = javascript_include_tag "application"
