--- a/app/views/buy_residential_properties/_form.html.slim
+++ b/app/views/buy_residential_properties/_form.html.slim
@@ -1,2 +1,8 @@
 = form_for @new_property, url: buy_residential_properties_url do |f|
-  = f.text_field :name
+  .card
+    = f.text_field :name
+    = f.text_field :address
+    = f.text_field :price
+    = f.text_field :floore_size
+    = f.text_field :floore_level
+    = f.text_field :completion_date
