--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -12,5 +12,6 @@ head
   link[rel="preload" href="/assets/font/roboto/Roboto-Regular.wolf2" as="font" type="font/woff2" crossorigin="anonymous"]
   link[rel="preload" href="/assets/font/roboto/Roboto-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
   link[rel="preload" href="/assets/font/roboto/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
+  = stylesheet_link_tag 'application'
 
   = yield :local_css
