--- a/app/views/buy_residential_properties/_form.html.slim
+++ b/app/views/buy_residential_properties/_form.html.slim
@@ -11,7 +11,7 @@
         .col-12
           = f.text_field :price, {required: true}
         .col-12
-          = f.text_field :floore_size
+          = f.text_field :floore_size, {required: true}
       .row.px-3
         .col-12
           = f.text_field :floore_level
