--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -6,6 +6,10 @@ footer.page-footer.py-4
           dt.mb-3.font-middle How to use
           dd
             a href='' akahane
+      .col-12.col-md-6.col-lg-3
+        dl.mb-5
+          dt.mb-3.font-middle Price
+            a href='' Price dayo
 
     / コピーライト表示年の自動更新
     - year = Date.today.year
