--- a/app/views/buy_residential_properties/_form.html.slim
+++ b/app/views/buy_residential_properties/_form.html.slim
@@ -21,6 +21,32 @@
         .col-12
           = f.single_dropdown_list :property_type, BuyResidentialProperty.property_type.options(selected: @new_property.property_type)
         .col-12
+          = f.single_dropdown_list :ward_id, BuyResidentialProperty.ward_id.options(selected: @new_property.ward_id)
+      .row.px-3
+        .col-12
+          = f.single_dropdown_list :floore_plan, BuyResidentialProperty.floore_plan.options(selected: @new_property.floore_plan)
+        .col-12
+          = f.text_field :balcony_size
+      .row.px-3
+        .col-12
+          = f.single_dropdown_list :balcony_direction, BuyResidentialProperty.balcony_direction.options(selected: @new_property.balcony_direction)
+        .col-12
+          = f.text_field :total_number_of_houses
+      .row.px-3
+        .col-12
+          = f.single_dropdown_list :rights_concening_land, BuyResidentialProperty.rights_concening_land.options(selected: @new_property.rights_concening_land), {include_blank: 'confirm'}
+        .col-12
+          = f.text_field :management_company
+      .row.px-3
+        .col-12
+          = f.text_field :management_fee
+        .col-12
+          = f.text_field :repair_reserve_fund
+      .row.px-3
+        .col-12
+          = f.date_field :handover_date
+        .col-12
+          / transportation
 
 
 
