--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>TokyoRealEstateCommunity</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+= render :partial => 'layouts/head'
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+body
+  = render :partial => 'lauouts/header'
 
-  <body>
-    <%= yield %>
-  </body>
-</html>
+  / main contents start
+  main.pb-5.margin-header
+    .container-fluid
+      .row
+        .col-12
+          = yield
+  / main contents end
+
+  = render :partial => 'layouts/footer'
+
+  = javascript_include_tag "application"
+  = yield :local_js
+  javascript:
+    #{flash_messages}
