--- a/app/views/buy_residential_properties/_form.html.slim
+++ b/app/views/buy_residential_properties/_form.html.slim
@@ -50,4 +50,4 @@
 
   .row.justify-content-md-center.mt-5
     .col-12.col-md-4.mt-2
-      = f.button t('confirm'), type: 'submit', class: 'btn btn-deep-orange btn-block btn-lg font-extralarge'
+      = f.button t('Regist'), type: 'submit', class: 'btn btn-deep-orange btn-block btn-lg font-extralarge'
