--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -13,5 +13,7 @@ head
   link[rel="preload" href="/assets/font/roboto/Roboto-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
   link[rel="preload" href="/assets/font/roboto/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous"]
   = stylesheet_link_tag 'application'
+  = stylesheet_link_tag "/assets/environment/#{Rails.env}"
+  = stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons'
 
   = yield :local_css
