--- a/app/views/buy_residential_properties/_form.html.slim
+++ b/app/views/buy_residential_properties/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @new_property, url: buy_residential_properties_url, builder: FormHelper::OriginalFormBuilder do |f|
+= form_for @residential_property, url: get_residential_property_form_for_url(@residential_property), builder: FormHelper::OriginalFormBuilder do |f|
   .card.px-3.px-md-4.form-card.mt-2.pt-5
     .pl-0.pl-sm-2.border-bottom.mb-5
       .row.px-3
@@ -19,22 +19,22 @@
           = f.date_field :completion_date, {required: true}
       .row.px-3
         .col-6
-          = f.single_dropdown_list :property_type, BuyResidentialProperty.property_type.options(selected: @new_property.property_type), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :property_type, BuyResidentialProperty.property_type.options(selected: @residential_property.property_type), {include_blank: 'please_select'}, {required: true}
         .col-6
-          = f.single_dropdown_list :ward_id, BuyResidentialProperty.ward_id.options(selected: @new_property.ward_id), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :ward_id, BuyResidentialProperty.ward_id.options(selected: @residential_property.ward_id), {include_blank: 'please_select'}, {required: true}
       .row.px-3
         .col-6
-          = f.single_dropdown_list :floore_plan, BuyResidentialProperty.floore_plan.options(selected: @new_property.floore_plan), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :floore_plan, BuyResidentialProperty.floore_plan.options(selected: @residential_property.floore_plan), {include_blank: 'please_select'}, {required: true}
         .col-6
           = f.text_field :balcony_size
       .row.px-3
         .col-6
-          = f.single_dropdown_list :balcony_direction, BuyResidentialProperty.balcony_direction.options(selected: @new_property.balcony_direction), {include_blank: 'not_selected'}
+          = f.single_dropdown_list :balcony_direction, BuyResidentialProperty.balcony_direction.options(selected: @residential_property.balcony_direction), {include_blank: 'not_selected'}
         .col-6
           = f.text_field :total_number_of_houses
       .row.px-3
         .col-6
-          = f.single_dropdown_list :rights_concening_land, BuyResidentialProperty.rights_concening_land.options(selected: @new_property.rights_concening_land), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :rights_concening_land, BuyResidentialProperty.rights_concening_land.options(selected: @residential_property.rights_concening_land), {include_blank: 'please_select'}, {required: true}
         .col-6
           = f.text_field :management_company
       .row.px-3
