--- a/app/views/buy_residential_properties/detail.html.slim
+++ b/app/views/buy_residential_properties/detail.html.slim
@@ -1,4 +1,4 @@
 .card
   .card-header.py-4
     h2.font-extralarge.float-sm-left.mb-0
-      = @property.property_name
+      = @residential_property.property_name
