--- a/app/views/users/registrations/thanks.html.slim
+++ b/app/views/users/registrations/thanks.html.slim
@@ -18,5 +18,5 @@
             = f.button t('resend_same_email'), type: 'submit', class: 'btn btn-default btn-block btn-lg font-middle px-0'
       .col-12.col-md-8.mx-auto.mt-4
         span #{t('msg.unable_to_receive_email')}
-        = link_to t('contact_us', '/contacts/new')
+        = link_to t('contact_us'), '/contacts/new'
         span #{t('msg.please_contact_us')}
