--- a/app/views/buy_residential_properties/_active_summary.html.slim
+++ b/app/views/buy_residential_properties/_active_summary.html.slim
@@ -11,3 +11,8 @@
       .clear
         label.custom-grey-text.d-block.float-left #{t('updated_at')}
         p.text-right = property.updated_at
+
+    = link_to detail_buy_residential_property_path(property.id) do
+      .card-footer.text-center
+        span.bold
+          = t('browse_detail')
