--- a/app/views/buy_residential_properties/detail.html.slim
+++ b/app/views/buy_residential_properties/detail.html.slim
@@ -1,4 +1,16 @@
+- breadcrumb :buy_residential_property, @residential_property
 .card
   .card-header.py-4
     h2.font-extralarge.float-sm-left.mb-0
       = @residential_property.property_name
+
+    .text-right.nowrap
+      .d-inline-block[data-toggle='tooltip' title='display as text']
+        a.mdb-modal-form[data-toggle='modal' data-reference='#display_text_format' href='']
+          i.material-icons.pl-1.md-white.align-text-bottom
+            | file_copy
+
+  .card-body
+    = render partial: 'specific'
+    .mx-auto.float-right#res_uuid_text
+      | ID:#{@residential_property.id}
