--- a/app/views/sell_properties/_form.html.slim
+++ b/app/views/sell_properties/_form.html.slim
@@ -19,22 +19,22 @@
           = f.date_field :completion_date, {required: true}
       .row.px-3
         .col-6
-          = f.single_dropdown_list :property_type, BuyResidentialProperty.property_type.options(selected: @residential_property.property_type), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :property_type, BuyResidentialProperty.property_type.options(selected: @sell_property.property_type), {include_blank: 'please_select'}, {required: true}
         .col-6
-          = f.single_dropdown_list :ward_id, BuyResidentialProperty.ward_id.options(selected: @residential_property.ward_id), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :ward_id, BuyResidentialProperty.ward_id.options(selected: @sell_property.ward_id), {include_blank: 'please_select'}, {required: true}
       .row.px-3
         .col-6
-          = f.single_dropdown_list :floore_plan, BuyResidentialProperty.floore_plan.options(selected: @residential_property.floore_plan), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :floore_plan, BuyResidentialProperty.floore_plan.options(selected: @sell_property.floore_plan), {include_blank: 'please_select'}, {required: true}
         .col-6
           = f.text_field :balcony_size
       .row.px-3
         .col-6
-          = f.single_dropdown_list :balcony_direction, BuyResidentialProperty.balcony_direction.options(selected: @residential_property.balcony_direction), {include_blank: 'not_selected'}
+          = f.single_dropdown_list :balcony_direction, BuyResidentialProperty.balcony_direction.options(selected: @sell_property.balcony_direction), {include_blank: 'not_selected'}
         .col-6
           = f.text_field :total_number_of_houses
       .row.px-3
         .col-6
-          = f.single_dropdown_list :rights_concening_land, BuyResidentialProperty.rights_concening_land.options(selected: @residential_property.rights_concening_land), {include_blank: 'please_select'}, {required: true}
+          = f.single_dropdown_list :rights_concening_land, BuyResidentialProperty.rights_concening_land.options(selected: @sell_property.rights_concening_land), {include_blank: 'please_select'}, {required: true}
         .col-6
           = f.text_field :management_company
       .row.px-3
