--- a/app/views/layouts/single_column.html.slim
+++ b/app/views/layouts/single_column.html.slim
@@ -18,6 +18,11 @@ html
     = render :partial => 'layouts/footer'
 
   = javascript_include_tag "application"
+  - if browser.ie?
+    = javascript_include_tag "mdb4.7.6/mdb.min"
+  - else
+    = javascript_include_tag "mdb.min"
+  = javascript_include_tag "common"
   = yield :local_js
-  javascript
+  javascript:
     #{flash_messages}
