--- a/app/views/recommends/new.html.slim
+++ b/app/views/recommends/new.html.slim
@@ -1,3 +1,9 @@
 = form_for @recommend, url: get_recommend_form_for_url(@recommend), builder: FormHelper::OriginalFormBuilder do |f|
   .card.px-3.px-md-4.form-card.mt-2.pt-5
     .pl-0.pl-sm-2.border-bottom.mb-5
+      .row.px-3
+        .col-6
+          = f.multi_checkbox :building_classification, Recommend.building_classification.options(selected: @recommend.building_classification), {include_blank: 'please_select'}, {required: true}
+        .col-6
+          = f.single_dropdown_list :ward_id, Recommend.ward_id.options(selected: @recommend.ward_id), {include_blank: 'please_select'}, {required: true}
+      = f.range_input_by_text :require_price_min, :require_price_max, t('ten_thousand_yen'), {required: true, form_name: 'preferred_property_price', label_class: 'font-middle mb-3', line_class: 'mb-0 col-12 row'}
