--- a/app/views/recommends/new.html.slim
+++ b/app/views/recommends/new.html.slim
@@ -16,6 +16,7 @@
           = f.single_dropdown_list :time_to_nearest_station, Recommend.time_to_nearest_station.options(selected: @recommend.time_to_nearest_station), {include_blank: 'please_select'}, {required: true}
         .col-6
           = f.text_field :recommend_name
+      = f.multi_checkbox :building_structure, Recommend.building_structure.options(selected: @recommend.building_structure), {include_blank: 'please_select'}, {required: true}
       = f.range_input_by_text :require_price_min, :require_price_max, t('ten_thousand_yen'), {required: true, form_name: 'preferred_property_price', label_class: 'font-middle mb-3', line_class: 'mb-0 col-12 row'}
       = f.text_area :comment
   .row.justify-content-md-center.mt-5
