--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -14,4 +14,4 @@ footer.page-footer.py-4
     / コピーライト表示年の自動更新
     - year = Date.today.year
     p.mb-0.mt-2.white-text.small
-      | Copyright ©︎#{year} Tokyo Real Estate Community, Inc. All Rights Reserved.
+      | Copyright ©︎#{year} Real Estate Community, Inc. All Rights Reserved.
