--- a/app/views/users/edit_account_type.html.slim
+++ b/app/views/users/edit_account_type.html.slim
@@ -4,5 +4,5 @@
       label.font-middle.mb-3.d-block = t('full_name')
       p.mb-5 = @user.full_name
       = f.fields_for @user.role do |r|
-        = r.standard_radio_buttons :account_type, Trec::Role.account_type.options(except: :main_account), {label_class: 'font-middle mb-3', form_inline: true}
+        = r.standard_radio_buttons :account_type, Rc::Role.account_type.options(except: :main_account), {label_class: 'font-middle mb-3', form_inline: true}
         = f.hidden_field :id
